--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Zen+Loop&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+
 *{
     padding: 0;
     margin: 0;
@@ -10,4 +13,11 @@
     margin: auto;
     width: 90%;
     height: 50px;
+}
+
+main {
+    background:lightseagreen;
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 30px;
+    font-weight: 700;
 }
