changed label main to body

--- a/estilos.css
+++ b/estilos.css
@@ -15,7 +15,7 @@
     height: 50px;
 }
 
-main {
+body {
     background:lightseagreen;
     font-family: 'Titillium Web', sans-serif;
     font-size: 30px;
