--- a/estilos.css
+++ b/estilos.css
@@ -7,17 +7,25 @@
 
 }
 
+header{
+    width: 100%;
+}
+
 .prueba {
     background: hotpink;
     color: indigo;
     margin: auto;
     width: 100%;
     height: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .contenido {
     width: 80%;
     float: left;
+    height: 500px;
 
 }
 
@@ -27,6 +35,37 @@
     background: lightseagreen;
     font-size: 12px;
     position: relative;
+    box-sizing: content-box;
+    border: solid 1px gray;
+    height: 500px;
+}
+
+.biografia .fotoyo{
+    width: 50%;
+    height: 150px;
+    display: block;
+    margin: 15px auto;
+    object-fit: cover;
+    border-radius: 50%;
+    /* border radius con 50% para hcer circular una imagen o contenedor */
+    box-shadow: 5px 5px 10px darkslateblue;
+}
+
+.biografia .yo {
+    color: hotpink;
+    text-shadow: 1px 1px darkslateblue;
+    width: 100%;
+    text-align: center;
+}
+
+.biografia .listaseries {
+    margin-top: 15px;
+    color: hotpink;
+    text-shadow: 1px 1px darkslateblue;
+}
+
+.biografia .listaser {
+    margin-left: 25px;
 }
 
 body {
