--- a/estilos.css
+++ b/estilos.css
@@ -137,7 +137,24 @@ body {
     width: 100%;
     height: 500px;
     align-items: center;
+    background-image: url("img/IMG_0100.jpg");
+    background-position: center;
 
+}
+
+.contenido h2 {
+    font-size: 5em;
+    color: #000;
+    transition: all 1s ease-in;
+    margin-left: 25px;
+}
+
+.contenido h2 span {
+    font-weight: 900;
+}
+
+.contenido h2:hover {
+    text-shadow: 0 0 5px #fff;
 }
 
 .biografia {
