--- a/estilos.css
+++ b/estilos.css
@@ -50,7 +50,6 @@ body {
 
 .nav-links {
     font-size: 1.1em;
-    position: absolute;
 }
 
 .nav-links li {
@@ -106,7 +105,7 @@ body {
         right: 0;
         left: 0;
         flex-direction: column;
-        z-index: 10;
+        z-index: 100;
         justify-content: center;
         align-items: center;
         transition: top 1s ease;
@@ -146,8 +145,9 @@ body {
 
 .contenido {
     width: 100%;
-    height: 500px;
+    height: 650px;
     align-items: center;
+    background-color: #000;
     background-image: url("img/IMG_0100.jpg");
     background-position: center;
 
@@ -158,6 +158,8 @@ body {
     color: #000;
     transition: all 1s ease-in;
     margin-left: 25px;
+    max-width: 100%;
+    overflow: hidden;
 }
 
 .contenido h2 span {
